<resources>
    <string name="app_name">CourtCounter</string>
    <string name="reset">Reset</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="default_score">0</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="points1">Free throw</string>
    <string name="firstQuarter">First quarter</string>
    <string name="secondQuarter">Second quarter</string>
    <string name="thirdQuarter">Third quarter</string>
    <string name="fourthQuarter">Fourth quarter</string>
    <string name="start">Lets start it</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="finish">Finish</string>
</resources>
