<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <TextView
        android:id="@+id/whatQuarter"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/firstQuarter"
        android:textColor="#616161"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/whatQuarter"
        android:divider="?android:dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/scoreTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/globalScoreTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="#616161"
                android:visibility="invisible"
                android:textSize="14sp" />

            <Button
                android:id="@+id/points3A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/points3" />

            <Button
                android:id="@+id/points2A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points2" />

            <Button
                android:id="@+id/points1A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/scoreTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/globalScoreTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="#616161"
                android:visibility="invisible"
                android:textSize="14sp" />

            <Button
                android:id="@+id/points3B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/points3" />

            <Button
                android:id="@+id/points2B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points2" />

            <Button
                android:id="@+id/points1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points1" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        android:text="@string/previous" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        android:text="@string/finish" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        android:text="@string/reset" />


</RelativeLayout>
